# munibot

./: .cocoa.toml  .gitignore  .versionrc  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  changelog_template.tera  cog.toml  devenv.nix  devenv.yaml  diesel.toml  flake.nix  secretspec.toml  treefmt.nix  typos.toml
.github/: FUNDING.yml
docs/: tracing.md
docs/plans/: modular-refactor.md
migrations/2026-02-28-191931-0000_init-tables/: down.sql  up.sql
munibot/: Cargo.toml
munibot/src/: config.rs  db.rs  discord.rs  handlers.rs  lib.rs  main.rs  passing.rs  twitch.rs
munibot/src/db/: models.rs
munibot/src/discord/: admin.rs  autodelete.rs  handler.rs  simple.rs  state.rs  vc_greeter.rs
munibot/src/handlers/: bonk.rs  bot_affection.rs  content_warning.rs  dice.rs  economy.rs  eight_ball.rs  greeting.rs  lift.rs  logging.rs  magical.rs  quotes.rs  shoutout.rs  socials.rs  temperature.rs  ventriloquize.rs
munibot/src/handlers/economy/: payout.rs  wallet.rs
munibot/src/twitch/: bot.rs
munibot_core/: Cargo.toml
munibot_core/src/: config.rs  db.rs  error.rs  greeting.rs  lib.rs  magical.rs  passing.rs
munibot_core/src/db/: operations.rs
munibot_core/tests/: operations.rs
munibot_core/tests/common/: mod.rs
munibot_discord/: Cargo.toml
munibot_discord/src/: admin.rs  autodelete.rs  commands.rs  error.rs  handler.rs  handlers.rs  lib.rs  simple.rs  state.rs  utils.rs  vc_greeter.rs
munibot_discord/src/commands/: fox.rs
munibot_discord/src/commands/fox/: api.rs
munibot_discord/src/handlers/: bot_affection.rs  dice.rs  economy.rs  eight_ball.rs  greeting.rs  logging.rs  magical.rs  temperature.rs  ventriloquize.rs
munibot_discord/src/handlers/economy/: payout.rs  wallet.rs
munibot_twitch/: Cargo.toml
munibot_twitch/src/: agent.rs  bot.rs  handler.rs  handlers.rs  lib.rs
munibot_twitch/src/handlers/: affection.rs  autoban.rs  bonk.rs  content_warning.rs  greeting.rs  lift.rs  lurk.rs  magical.rs  quotes.rs  shoutout.rs  socials.rs
nix/: nixos.nix
src/: config.rs  db.rs  discord.rs  lib.rs  main.rs  passing.rs
src/db/: migration.rs  operations.rs  schema.rs
src/discord/: admin.rs  autodelete.rs  commands.rs  simple.rs  state.rs  vc_greeter.rs
src/handlers/: autoban.rs  bot_affection.rs  content_warning.rs  dice.rs  economy.rs  eight_ball.rs  greeting.rs  logging.rs  magical.rs  quotes.rs  shoutout.rs  socials.rs  temperature.rs  ventriloquize.rs
src/handlers/economy/: payout.rs  wallet.rs
src/twitch/: agent.rs  bot.rs  handler.rs
tests/: export.surql  migration.rs  operations.rs
tests/common/: mod.rs
