[package]
name = "munibot"
description = "the universe's most lovable bot, personality included"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
munibot_core = { path = "../munibot_core" }
munibot_discord = { path = "../munibot_discord" }
munibot_twitch = { path = "../munibot_twitch" }
clap.workspace = true
dotenvy.workspace = true
env_logger.workspace = true
log.workspace = true
tokio.workspace = true
