[package]
name = "munibot_core"
description = "platform-agnostic core library for munibot"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
diesel.workspace = true
humantime.workspace = true
reqwest.workspace = true
serde_json.workspace = true
thiserror.workspace = true
