[package]
name = "munibot_core"
description = "platform-agnostic core library for munibot"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
diesel.workspace = true
diesel-async.workspace = true
diesel_migrations.workspace = true
dotenvy.workspace = true
humantime.workspace = true
log.workspace = true
once_cell.workspace = true
rand.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
