[package]
name = "munibot_twitch"
description = "twitch integration for munibot"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
munibot_core = { path = "../munibot_core" }
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
decancer.workspace = true
diesel.workspace = true
diesel-async.workspace = true
log.workspace = true
once_cell.workspace = true
rand.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
twitch-irc.workspace = true
twitch_api.workspace = true
twitch_oauth2.workspace = true
url.workspace = true
